# ft_printf

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ft_printf.c  ft_printf.h  main.c
inc/: ft_printf.h
libft/inc/: libft.h
src/: ft_X2.c  ft_b.c  ft_c.c  ft_d.c  ft_e.c  ft_f.c  ft_g.c  ft_itoa_long.c  ft_o.c  ft_p.c  ft_printf.c  ft_s.c  ft_u.c  ft_x.c  ft_x2.c  handler_flags.c  itoa_double.c  main.c  mult_double.c  parsing.c  print_base_nbr.c  rounding.c
